--- a/mirror_react/src/App.css
+++ b/mirror_react/src/App.css
@@ -54,7 +54,8 @@ body{
     flex-direction: column;
     float:left;
     width:450px;
-height:300px;}
+    height:300px;
+}
 
 .top-align{
     padding-top:2%;
