--- a/mirror_react/src/App.css
+++ b/mirror_react/src/App.css
@@ -61,11 +61,18 @@ body{
 }
 
 .top-align, .bottom-align{
-    height:30%;
     position: relative;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+}
+
+.top-align{
+    height:30%;
+}
+
+.bottom-align{
+    height:13%;
 }
 
 .top-middle-align{
@@ -191,52 +198,66 @@ body{
     font-size:130%;
 }
 
-.running{
-    width:500px;
-    height:120px;
-    position: absolute;
-    left:5px;
-    bottom:15px;
+.bottom-left-align{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+}
+
+.bottom-right-align{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+}
+
+.numbers {
+    width:65%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    text-align: left;
+}
+
+.icons {
+    width: 35%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    text-align: center;
 }
 
 .runBig{
-    height:70%;
-    width:100%;
-    top:0px;
-    position: inherit;
     font-size:250%;
     font-weight:bold;
-    text-align: center;
 }
 
 .runSmall{
-    height:30%;
-    padding-left: 30px;;
-    bottom:0px;
     font-size:150%;
-    text-align: center;
-    position:absolute;
-   
-
+    padding-top: 5px;
 }
 
 .calIcon{
-    width:20%;
     float:left;
+    justify-content: center;
 }
 
 .runIcon{
-    width:15%;
     float:left;
+    justify-content: center;
 }
 
 .total_run{
     float:left;
-    padding-left: 40px;;
+    padding-left: 8px;
 }
 
 .ytd_run{
     float:left;
+}
+
+.calories{
+    font-size:175%;
+    font-weight:bold;
 }
 
 ::-webkit-scrollbar {
