--- a/mirror_react/src/App.css
+++ b/mirror_react/src/App.css
@@ -272,7 +272,7 @@ body{
     font-size:175%;
     text-align: center;
     padding-top:4px;
-    padding-right: 10px;
+    padding-right: 2%;
 }
 
 ::-webkit-scrollbar {
